<resources>
    <string name="app_name">Bookinglapang</string>
    <string name="password_icon">password_icon</string>
    <string name="email_icon">email_icon</string>
    <string name="login_icon">login_icon</string>
    <string name="background">background</string>
    <string name="log_in">LOG IN</string>
    <string name="register"><u>Don\'t have an account? Register here!</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bayar">Bayar</string>
    <string name="belum_dibayar">Belum Dibayar</string>
    <string name="belum_verifikasi">Belum Verifikasi</string>
    <string name="jam_selesai">Jam Selesai</string>
    <string name="jam_main">Jam Main</string>
    <string name="tanggal_main">Tanggal Main</string>
    <string name="pilih_olahraga">Pilih Olahraga</string>
    <string name="pilih_lapangan">Pilih Lapangan</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="status_pemesanan">Status Pemesanan</string>
    <string name="booked">BOOKED</string>
    <string name="channel_id">Channel01</string>
    <string name="jenis_olahraga">Jenis Olahraga</string>
    <string name="tempat">Tempat</string>
    <string name="waktu">Waktu</string>
    <string name="harga">Harga : -</string>
    <string name="order_status_sukses">Sukses</string>
    <string name="order_status_gagal">Gagal</string>
    <string name="order_status_n_transfer">Belum transfer</string>
    <string name="order_status_n_verifikasi">Belum verifikasi</string>
    <string name="order_status_avaiable">ADA</string>
    <string name="order_status_not_avaiable">TIDAK ADA</string>
    <string name="order_status_n_pay">BELUM BAYAR</string>
    <string name="order_status_final_confirmation">Konfirmasi Final</string>
    <string name="order_status_waiting_confirmation">Menunggu Konfirmasi</string>
    <string name="order_action_n_confirm">Tidak bisa</string>
    <string name="order_action_confirm">Konfirmasi</string>
    <string name="order_action_n_avaiable">Tidak ada</string>
    <string name="order_action_avaiable">Ada</string>
    <string name="nama_pemilik_rekening">Nama Pemilik Rekening</string>
    <string name="nama_pemesan">Nama Pemesan</string>
    <string name="bank">Bank</string>
    <string name="jumlah">Jumlah</string>
    <string name="sudah_transfer">Sudah Transfer</string>
    <string name="gagal">Gagal</string>
    <string name="order_status_waiting_confirm">Menunggu konfirmasi</string>
    <string name="order_status_booked">Booked</string>
    <string name="order_action_pay">Bayar</string>
    <string name="order_status_verified">Sudah Terverifikasi</string>
    <string name="order_status_deadline_timer_empty">Maksimal pembayaran : … menit</string>
    <string name="order_status_deadline_fill">Maksimal pembayaran : %d menit</string>
    <string name="waktu_valid">Jam operasi : -</string>
    <string name="dummy_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="book_now">Book Now</string>
</resources>
