<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".order.view.OrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_order"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_confirmation"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/divider"/>
            </LinearLayout>
        </LinearLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/pilih_lapangan"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_input_background"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/pilih_olahraga"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_input_background"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/tanggal_main"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_input_background"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/jam_main"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_input_background"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/jam_selesai"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_input_background"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_grey"
                    android:text="@string/belum_verifikasi"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_grey"
                    android:text="@string/belum_dibayar"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</FrameLayout>