<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".status.view.StatusFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_status"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_pemesanan"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/divider"/>
            </LinearLayout>
        </LinearLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/pilih_lapangan"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_input_background"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/pilih_olahraga"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_input_background"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/tanggal_main"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_input_background"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/jam_main"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_input_background"
                    android:layout_weight="3"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/jam_selesai"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_input_background"
                    android:layout_weight="3"/>
            </TableRow>
        </TableLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_green"
            android:text="@string/booked"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:padding="2dp"
            android:minHeight="20dp">
        </Button>
    </LinearLayout>

</FrameLayout>