<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.status.view.StatusFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_order" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_confirmation"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/divider" />
                </LinearLayout>
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/pilih_lapangan"
                        android:textColor="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/field_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/form_input_background"
                        android:layout_weight="3"
                        android:cursorVisible="true"
                        android:textCursorDrawable="@null"
                        android:editable="false"
                        android:paddingLeft="@dimen/befote_text"
                        android:paddingRight="@dimen/befote_text" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/pilih_olahraga"
                        android:textColor="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/sport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/form_input_background"
                        android:layout_weight="3"
                        android:cursorVisible="true"
                        android:textCursorDrawable="@null"
                        android:editable="false"
                        android:paddingLeft="@dimen/befote_text"
                        android:paddingRight="@dimen/befote_text" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/tanggal_main"
                        android:textColor="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/form_input_background"
                        android:layout_weight="3"
                        android:cursorVisible="true"
                        android:textCursorDrawable="@null"
                        android:editable="false"
                        android:paddingLeft="@dimen/befote_text"
                        android:paddingRight="@dimen/befote_text" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/jam_main"
                        android:textColor="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/start_hour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/form_input_background"
                        android:layout_weight="3"
                        android:cursorVisible="true"
                        android:textCursorDrawable="@null"
                        android:editable="false"
                        android:paddingLeft="@dimen/befote_text"
                        android:paddingRight="@dimen/befote_text" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/jam_selesai"
                        android:textColor="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/end_hour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/form_input_background"
                        android:layout_weight="3"
                        android:cursorVisible="true"
                        android:textCursorDrawable="@null"
                        android:editable="false"
                        android:paddingLeft="@dimen/befote_text"
                        android:paddingRight="@dimen/befote_text" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:layout_weight="4"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="Feedback"
                            android:textColor="@color/colorPrimary" />

                        <EditText
                            android:id="@+id/feedback"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:background="@drawable/form_input_background"
                            android:cursorVisible="true"
                            android:editable="false"
                            android:focusable="false"
                            android:inputType="textMultiLine"
                            android:paddingLeft="@dimen/befote_text"
                            android:paddingRight="@dimen/befote_text"
                            android:singleLine="false"
                            android:textCursorDrawable="@null"
                            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tristique, massa quis tincidunt tincidunt, tortor eros tincidunt leo, non scelerisque." />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/verification_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_grey"
                        android:minHeight="20dp"
                        android:text="@string/belum_verifikasi"
                        android:textAllCaps="false"
                        android:textColor="#ffffff" />

                    <Button
                        android:id="@+id/verified_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_green"
                        android:minHeight="20dp"
                        android:text="@string/order_status_verified"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/paid_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_grey"
                        android:minHeight="20dp"
                        android:text="@string/belum_dibayar"
                        android:textAllCaps="false"
                        android:textColor="#ffffff" />

                    <Button
                        android:id="@+id/pay_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_green"
                        android:minHeight="20dp"
                        android:text="@string/order_action_pay"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/failed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_red"
                        android:minHeight="20dp"
                        android:text="@string/order_status_gagal"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/booked"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_green"
                        android:minHeight="20dp"
                        android:text="@string/order_status_booked"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/waitingConfirmation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_grey"
                        android:minHeight="20dp"
                        android:text="@string/order_status_waiting_confirm"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:visibility="gone"/>
                </TableRow>

            </TableLayout>
            <TextView
                android:layout_marginTop="15dp"
                android:layout_marginBottom="45dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:visibility="visible"
                android:id="@+id/deadlineText"
                android:text="@string/order_status_deadline_timer_empty"
                android:textColor="#ff0000"/>

        </LinearLayout>

    </ScrollView>

</layout>