<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:contentDescription="@string/background"
            android:rotation="180"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="650dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/homeLogo"
                    android:layout_width="343dp"
                    android:layout_height="629dp"
                    app:srcCompat="@drawable/toolbar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="7.5dp"
                android:paddingTop="15dp"
                android:paddingRight="7.5dp"
                android:paddingBottom="10dp">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_btn"
                    android:text="@string/log_in"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_green"
                    android:text="@string/register"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>